Fix empty value handling of HttpResponseHeaders::GetNormalizedHeader

Per RFC7230 empty header field is valid, but
HttpResponseHeaders::GetNormalizedHeader sometimes ignores empty values.
This CL fixes the issue.

Bug: 866787, 736308
Change-Id: I227e18e413740e345d557e2c24a25e45e68b0ae8
Reviewed-on: https://chromium-review.googlesource.com/1148091
Reviewed-by: Helen Li <xunjieli@chromium.org>
Commit-Queue: Yutaka Hirano <yhirano@chromium.org>
Cr-Commit-Position: refs/heads/master@{#577852}
Former-commit-id: b53bca17f41038da87367186e37bcad0165719c8